NetBSD Problem Report #39439

From tron@zhadum.org.uk  Sun Aug 31 12:29:50 2008
Return-Path: <tron@zhadum.org.uk>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 5164163B853
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 31 Aug 2008 12:29:50 +0000 (UTC)
Message-Id: <20080831122947.043403E3BB@lyssa.zhadum.org.uk>
Date: Sun, 31 Aug 2008 13:29:46 +0100 (BST)
From: tron@zhadum.org.uk
Reply-To: tron@zhadum.org.uk
To: gnats-bugs@gnats.NetBSD.org
Subject: IPv6 support broken in bge(4)
X-Send-Pr-Version: 3.95

>Number:         39439
>Category:       kern
>Synopsis:       IPv6 support broken in bge(4)
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    tron
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Aug 31 12:30:13 +0000 2008
>Closed-Date:    Sun Aug 31 20:03:22 +0000 2008
>Last-Modified:  Sun Aug 31 20:03:22 +0000 2008
>Originator:     tron@zhadum.org.uk
>Release:        NetBSD 4.99.72 2008-08-29 sources
>Organization:
Matthias Scheler                                  http://zhadum.org.uk/
>Environment:


System: NetBSD lyssa.zhadum.org.uk 4.99.72 NetBSD 4.99.72 (COLWYN.64) #1: Sun Aug 31 13:05:51 BST 2008 tron@lyssa.zhadum.org.uk:/src/sys/compile/COLWYN.64 amd64
Architecture: x86_64
Machine: amd64
>Description:
S.P.Zeilder and I are running NetBSD-current on HP Proliant ML110 G4 machines.
IPv6 stopped working reliable for both of us with recent kernels. Testing
indicates that this is a problem in bge(4) because it doesn't occur on a
system with a wm(4) interface and backing out the latest change to the
bge(4) driver cures the problem.

Here is the "dmesg" output for the bge(4) interface in the Proliant:

bge0 at pci3 dev 0 function 0: Broadcom BCM5721 Gigabit Ethernet
bge0: interrupting at ioapic0 pin 17
bge0: ASIC unknown BCM575x family (0x4201), Ethernet address 00:1c:c4:5f:0d:9b
bge0: setting short Tx thresholds
brgphy0 at bge0 phy 1: BCM5750 1000BASE-T media interface, rev. 0
brgphy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, 1000baseT, 1000baseT-FDX, auto

The message doesn't change with the new driver.

>How-To-Repeat:
Please read these e-mails:

http://mail-index.netbsd.org/tech-net/2008/08/31/msg000738.html
http://mail-index.netbsd.org/tech-net/2008/08/31/msg000739.html

>Fix:
Downgrading to revision 1.150 of "src/sys/dev/pci/if_bge.c" works around
the problem.

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->cegger
Responsible-Changed-By: tron@NetBSD.org
Responsible-Changed-When: Sun, 31 Aug 2008 12:34:08 +0000
Responsible-Changed-Why:
Christoph Egger comitted the change to bge(4) which causes this problem.


From: Matthias Drochner <M.Drochner@fz-juelich.de>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@NetBSD.org, gnats-admin@NetBSD.org,
	netbsd-bugs@NetBSD.org
Subject: Re: kern/39439: IPv6 support broken in bge(4) 
Date: Sun, 31 Aug 2008 14:50:57 +0200

 This is a multipart MIME message.

 --==_Exmh_8404488504300
 Content-Type: text/plain; charset=us-ascii


 The appended patch revert a bogus part of the last commit
 (ether_ioctl() was not called for SIOC{ADD,DEL}MULTI).
 It fixes the problem for me.

 best regards
 Matthias





 -------------------------------------------------------------------
 -------------------------------------------------------------------
 Forschungszentrum Juelich GmbH
 52425 Juelich

 Sitz der Gesellschaft: Juelich
 Eingetragen im Handelsregister des Amtsgerichts Dueren Nr. HR B 3498
 Vorsitzende des Aufsichtsrats: MinDir'in Baerbel Brumme-Bothe
 Geschaeftsfuehrung: Prof. Dr. Achim Bachem (Vorsitzender),
 Dr. Ulrich Krafft (stellv. Vorsitzender), Prof. Dr. Harald Bolt,
 Dr. Sebastian M. Schmidt
 -------------------------------------------------------------------
 -------------------------------------------------------------------

 --==_Exmh_8404488504300
 Content-Type: text/plain ; name="bge.txt"; charset=us-ascii
 Content-Description: bge.txt
 Content-Disposition: attachment; filename="bge.txt"

 #
 # old_revision [c9b390875247986ccb4e59c8658e1802c3e51637]
 #
 # patch "sys/dev/pci/if_bge.c"
 #  from [626800fa5eec175b8a33d62d2a12fa3678eaaf88]
 #    to [23a0304aa53c98aa181ed76b08a2615b64f4cb7c]
 #
 ============================================================
 --- sys/dev/pci/if_bge.c	626800fa5eec175b8a33d62d2a12fa3678eaaf88
 +++ sys/dev/pci/if_bge.c	23a0304aa53c98aa181ed76b08a2615b64f4cb7c
 @@ -4318,13 +4318,6 @@ bge_ioctl(struct ifnet *ifp, u_long comm
  		sc->bge_if_flags = ifp->if_flags;
  		error = 0;
  		break;
 -	case SIOCADDMULTI:
 -	case SIOCDELMULTI:
 -		if (ifp->if_flags & IFF_RUNNING) {
 -			bge_setmulti(sc);
 -			error = 0;
 -		}
 -		break;
  	case SIOCSIFMEDIA:
  		/* XXX Flow control is not supported for 1000BASE-SX */
  		if (sc->bge_tbi) {
 @@ -4357,10 +4350,15 @@ bge_ioctl(struct ifnet *ifp, u_long comm
  		}
  		break;
  	default:
 -		error = ether_ioctl(ifp, command, data);
 -		if (error == ENETRESET) {
 -			error = 0;
 -		}
 +		if ((error = ether_ioctl(ifp, command, data)) != ENETRESET)
 +			break;
 +
 +		error = 0;
 +
 +		if (command != SIOCADDMULTI && command != SIOCDELMULTI)
 +			;
 +		else if (ifp->if_flags & IFF_RUNNING)
 +			bge_setmulti(sc);
  		break;
  	}


 --==_Exmh_8404488504300--

Responsible-Changed-From-To: cegger->tron
Responsible-Changed-By: tron@NetBSD.org
Responsible-Changed-When: Sun, 31 Aug 2008 19:57:24 +0000
Responsible-Changed-Why:
I'll handle this PR.


From: Matthias Scheler <tron@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39439 CVS commit: src/sys/dev/pci
Date: Sun, 31 Aug 2008 19:57:03 +0000 (UTC)

 Module Name:	src
 Committed By:	tron
 Date:		Sun Aug 31 19:57:03 UTC 2008

 Modified Files:
 	src/sys/dev/pci: if_bge.c

 Log Message:
 Make multicast setup work again which got broken by the last commit.
 Patch provided by Matthias Drochner. This fixes PR kern/39439.


 To generate a diff of this commit:
 cvs rdiff -r1.151 -r1.152 src/sys/dev/pci/if_bge.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: tron@NetBSD.org
State-Changed-When: Sun, 31 Aug 2008 20:03:22 +0000
State-Changed-Why:
Fixed by applying Matthias Drochner's patch.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.