Make multicast setup work again which got broken by the last commit. Patch provided by Matthias Drochner. This fixes PR kern/39439.